<resources>
    <string name="app_name" translatable="false" >V-chat</string>
    <string name="FACEBOOK_APP_ID" translatable="false">put your fb app id here</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN" translatable="false">put your account token here</string>
    <string name="splash_message">This Application allows you to have a real-time chat with your friends ,you can register with your phone number.</string>
    <string name="key_message_notifications_settings_light" translatable="false">message_notifications_settings_light</string>
    <string name="key_message_group_notifications_settings_tone" translatable="false">message_group_notifications_settings_tone</string>
    <string name="key_message_group_notifications_settings_vibrate" translatable="false">message_group_notifications_settings_vibrate</string>
    <string name="key_message_group_notifications_settings_light" translatable="false">message_group_notifications_settings_light</string>
    <string name="key_call_notifications_settings_vibrate" translatable="false">call_notifications_settings_vibrate</string>
    <string name="key_enter_send" translatable="false">enter_send</string>
    <string name="key_message_font_size" translatable="false">message_font_size</string>
    <string name="key_wallpaper_message" translatable="false">wallpaper_message</string>
    <string name="key_conversations_tones" translatable="false">conversation_tones</string>
    <string name="key_message_notifications_settings_tone" translatable="false">message_notifications_settings_tone</string>
    <string name="key_call_notifications_settings_tone" translatable="false">call_notifications_settings_tone</string>
    <string name="key_message_notifications_settings_vibrate" translatable="false">message_notifications_settings_vibrate</string>
    <string name="picture_transition" translatable="false">Picture transition</string>
    <string name="user_image_transition" translatable="false">userImage</string>
    <string name="user_name_transition" translatable="false">userName</string>
    <string name="app_service_name" translatable="false">MessageService</string>
    <string name="icon_no_calls" translatable="false">\ue892</string>
    <string name="icon_crash" translatable="false">\ue7e8</string>
    <string name="icon_no_contacts" translatable="false">\ue892</string>
    <string name="icon_no_conversations" translatable="false">\ue892</string>
    <string name="contacts_title_tab" translatable="false">\ue722</string>
    <string name="icon_settings" translatable="false">\ue672</string>
    <string name="icon_chat" translatable="false">\ue7db</string>
    <string name="icon_notification" translatable="false">\ue8aa</string>
    <string name="icon_about" translatable="false">\ue956</string>
    <string name="icon_edit" translatable="false">\ue613</string>
    <string name="date_format_today"  translatable="false">HH:mm</string>
    <string name="date_format_current_month"  translatable="false">dd-MM-yyyy HH:mm</string>
    <string name="date_format"  translatable="false">dd-MM-yyyy</string>
    <string name="action_settings">Settings</string>
    <string name="title_conversations">Chats</string>
    <string name="title_settings">Settings</string>
    <string name="title_feed_back"><![CDATA[Help & About]]></string>
    <string name="more">More</string>
    <string name="title_sign_out">Log out</string>
    <string name="selected_count">%1$s selected</string>
    <string name="date_format_yesterday" >Yesterday</string>
    <string name="calls_title_tab"  >Calls</string>
    <string name="chats_title_tab" >Chats</string>
    <string name="number">Mobile number</string>
    <string name="NoMessages">There\'s no conversations yet, you may start one now</string>
    <string name="NoCalls">There\'s no calls yet, you may start one now</string>
    <string name="error_response">Unable to update.</string>
    <string name="NoContacts">There is no contacts .Please try again later or add new one</string>
    <string name="type_msg">Type a message</string>
    <string name="NoResult">Nothing</string>
    <string name="error_response_contacts">Unable to update your contacts.</string>
    <string name="error_response_conversations">Unable to update conversations.</string>
    <string name="error_response_groups">Unable to update groups.</string>
    <string name="error_response_messages">Unable to update messages.</string>
    <string name="name_is_too_short">the name is too short</string>
    <string name="select_picture">select an image</string>
    <string name="new_group">New group</string>
    <string name="starred_messages">Starred messages</string>
    <string name="status">Status</string>
    <string name="settings">Settings</string>
    <string name="refresh_contacts">Refresh</string>
    <string name="search">Search</string>
    <string name="add_contact">addContact</string>
    <string name="new_message">New Message</string>
    <string name="use_whats_clone">hey i\'m using …</string>
    <string name="title_activity_add_members_to_group">New group</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_edit_profile">Profile</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="view_in_ad_book">View in address book</string>
    <string name="hello_welcome_to_whats_clone">Welcome</string>
    <string name="next">NEXT</string>
    <string name="set_back_and_keep_calm_you_will_receive_an_sms_of_verification">Set back and keep calm you will receive an sms of verification</string>
    <string name="set_back_and_keep_calm_you_will_receive_an_sms_of_verification_kit">Set back and keep calm </string>
    <string name="resend">You didn\'t receive any code? Resend</string>
    <string name="enter_the_code_below_to_verify">Enter the code below to verify</string>
    <string name="enter_your_code">-- -- -- -- -- --</string>
    <string name="ok">OK</string>
    <string name="please_enter_your_ver_code">Please enter your verification code</string>
    <string name="enter_a_val_number">Enter a valid mobile phone</string>
    <string name="change_number">Change number</string>
    <string name="invite">INVITE</string>
    <string name="your_current_status">Your current status</string>
    <string name="select_your_new_status">Select your new status</string>
    <string name="title_activity_status">Status</string>
    <string name="Make_sure_delete_status">Do you want to delete this status</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="delete">Delete</string>
    <string name="delete_status">Delete status</string>
    <string name="cancel">Cancel</string>
    <string name="Ok">OK</string>
    <string name="write_something">Write something</string>
    <string name="error_response_status">Unable to get status</string>
    <string name="title_activity_edit_status">Edit status</string>
    <string name="deleteALL">Delete All</string>
    <string name="oops_something">Oops something went wrong </string>
    <string name="oops_something_crashed">Oops !! something went wrong . Please send a report to the developer</string>
    <string name="no_status"> No status </string>
    <string name="no_username"> No username </string>
    <string name="edit_status_activity_title">Edit Your Status</string>
    <string name="title_activity_edit_name">Enter your name</string>
    <string name="title_select_contacts">Select  contact</string>
    <string name="success_response_contacts">Your contacts has been  updated successfully</string>
    <string name="edit_group_name">edit group name</string>
    <string name="exit">Exit</string>
    <string name="shareContact">Share contact</string>
    <string name="isTyping">Typing  …</string>
    <string name="isOffline">Offline</string>
    <string name="isOnline">Online</string>
    <string name="lastSeen">Last seen</string>
    <string name="call">Call</string>
    <string name="attach">Attach</string>
    <string name="search_">Search …</string>
    <string name="add_new_member">Add</string>
    <string name="type_group_subject_here">Type group subject here …</string>
    <string name="provide_group_subject_and_optional_group_icon">Provide group subject and optional group icon</string>
    <string name="title_activity_edit_group_name">Enter new subject</string>
    <string name="attach_contact">Contact</string>
    <string name="attach_video">Video</string>
    <string name="attach_video_record">Record video</string>
    <string name="attach_location">Location</string>
    <string name="attach_audio">Audio</string>
    <string name="attach_camera">Camera</string>
    <string name="attach_gallery">Image</string>
    <string name="attach_document">Document</string>
    <string name="media">Media</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="view_contact">View Contact</string>
    <string name="group_info">Group Info</string>
    <string name="search_hint">Search …</string>
    <string name="alert_message_delete_conversation">Delete chat. Are you sure?</string>
    <string name="join_title">SIGN UP</string>
    <string name="hold_to_record">Hold to record</string>
    <string name="camera_permission">Camera Permission</string>
    <string name="audio_permission">Audio Permission</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="contacts_permission">Contacts Permission</string>
    <string name="vibrate_permission">Vibrate Permission</string>
    <string name="receive_sms_permission">Receive sms Permission</string>
    <string name="read_sms_permission">Read sms Permission</string>
    <string name="call_phone_permission">Call Phone Permission</string>
    <string name="get_accounts_permission">Get accounts Permission</string>
    <string name="write_sync_settings_permission">Get accounts Permission</string>
    <string name="read_sync_settings_permission">Get accounts Permission</string>
    <string name="camera_permission_message">Camera permission allows you to take pictures and capture videos. Please allow in App Settings for additional functionality.</string>
    <string name="record_audio_permission_message">Record audio permission allows you to  record audios. Please allow in App Settings for additional functionality.</string>
    <string name="settings_audio_permission_message">Modify audio permission allows us access to your audios. Please allow in App Settings for additional functionality.</string>
    <string name="write_storage_permission_message">Write External permission allows us  access to your media. Please allow in App Settings for additional functionality.</string>
    <string name="read_storage_permission_message">Read External permission allows us to read your media. Please allow in App Settings for additional functionality.</string>
    <string name="read_contacts_permission_message">Read Contacts permission allows us to read your contacts. Please allow in App Settings for additional functionality.</string>
    <string name="write_contacts_permission_message">Write Contacts permission allows you access to your contacts. Please allow in App Settings for additional functionality.</string>
    <string name="vibrate_permission_message">Vibrate permission . Please allow in App Settings for additional functionality.</string>
    <string name="copy_message">Copy</string>
    <string name="transfer_message">Forward</string>
    <string name="share_message">Share</string>
    <string name="clear_log_call">Clear log call</string>
    <string name="voice_call">VOICE CALL</string>
    <string name="video_call">VIDEO CALL</string>
    <string name="block_user">Block</string>
    <string name="phone">Phone</string>
    <string name="exit_group_prof">Exit group</string>
    <string name="delete_group">Delete group</string>
    <string name="participants_prof">Members</string>
</resources>