<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /**
  ~  * Created by Salman Saleem on 6/21/18 12:42 AM
  ~  * Copyright (c) 2018 . All rights reserved.
  ~  * Last modified 5/9/18 4:00 AM
  ~  */
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:id="@+id/media_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/inputs_background"
        android:visibility="gone">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/media_selection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_rect_ripple"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="6dp"
                    android:text="@string/media"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:id="@+id/media_counter"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="end"
                    android:textColor="@color/colorBlack"
                    android:visibility="visible" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/colorGray" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/mediaProfileList"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="@android:color/white"
                android:scrollbars="none"
                tools:listitem="@layout/row_media_profile" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/statusPhoneContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/inputs_background"
        android:visibility="gone">


        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/status"
                    android:textColor="@color/colorAccent" />

                <hani.momanii.supernova_emoji_library.Helper.EmojiconTextView
                    android:id="@+id/status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|start"
                    android:layout_marginTop="16dp"
                    android:gravity="left"
                    android:textColor="@color/colorBlack" />

                <TextView
                    android:id="@+id/status_date"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textColor="@color/colorGray2" />
            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorGray" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:text="@string/phone"
                android:textColor="@color/colorAccent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/numberPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:textColor="@color/colorBlack" />

                <ImageView
                    android:id="@+id/send_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/bg_item_round_ripple"
                    android:clickable="true"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_chat_bubble_24dp" />

                <ImageView
                    android:id="@+id/call_voice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/bg_item_round_ripple"
                    android:clickable="true"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_call_gary_24dp" />

                <ImageView
                    android:id="@+id/call_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/bg_item_round_ripple"
                    android:clickable="true"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_videocam_24dp" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:id="@+id/participantContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/inputs_background"
        android:visibility="gone">


        <LinearLayout
            style="@style/Widget.CardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:text="@string/participants_prof"
                        android:textColor="@color/colorAccent" />


                    <TextView
                        android:id="@+id/participantCounter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="end"
                        android:textColor="@color/colorGray2" />
                </LinearLayout>


            </LinearLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="0.1dp"
                android:background="@color/colorGray" />

            <FrameLayout
                android:id="@+id/frame_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible">


                <LinearLayout
                    android:id="@+id/empty"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical">

                            <com.tcv.vassistchat.ui.FontsView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="45dp"
                                android:gravity="center"
                                android:text="@string/icon_no_contacts"
                                android:textColor="@color/colorGray2"
                                android:textSize="90sp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:text="@string/NoContacts"
                                android:textColor="@color/colorGray2"
                                android:textSize="20dp" />
                        </LinearLayout>
                    </ScrollView>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/MembersList"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="none"
                        tools:listitem="@layout/row_add_members_group" />


                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/loadingPanel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:visibility="gone">

                    <ProgressBar
                        android:id="@+id/progress_bar"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:indeterminate="true" />

                </RelativeLayout>
            </FrameLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/inputs_background">

            <LinearLayout
                android:id="@+id/participantContainerDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_rect_ripple"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_delete_red_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:text="@string/delete_group"
                    android:textColor="@color/colorRedDark"
                    android:textSize="16sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/inputs_background">

            <LinearLayout
                android:id="@+id/participantContainerExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_item_rect_ripple"
                android:clickable="true"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/ic_close_red_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="end"
                    android:textStyle="bold"
                    android:text="@string/exit_group_prof"
                    android:textColor="@color/colorOrangeDark"
                    android:textSize="16sp" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

    </FrameLayout>
</LinearLayout>
